[project]
name = "jreakin-github-profile-readme"
version = "0.1.0"
description = "Profile README assets tooling"
authors = [{ name = "John Eakin" }]
dependencies = [
    "cairosvg>=2.8.2",
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

